--- a/mobileApp/app/app.css
+++ b/mobileApp/app/app.css
@@ -20,3 +20,11 @@ components that have the btn class name.
 .btn {
     font-size: 18;
 }
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
