--- a/mobileApp/app/app.css
+++ b/mobileApp/app/app.css
@@ -21,10 +21,17 @@ components that have the btn class name.
     font-size: 18;
 }
 
-.centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
+#main {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #c3c3c3;
+    display: -webkit-flex; /* Safari */
+    -webkit-flex-wrap: wrap; /* Safari 6.1+ */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#main div {
+    width: 50px;
+    height: 50px;
 }
