add red circles and toggles

--- a/gestionweb/src/MapContainer.css
+++ b/gestionweb/src/MapContainer.css
@@ -37,6 +37,11 @@
   display: inline-block;
 }
 
+#MapLog > #MapRight > label {
+  padding-top: 30px;
+  display: inline-block;
+}
+
 #Toggle {
   top: -5px;
   left: 10px;
