--- a/gestionweb/src/MapContainer.css
+++ b/gestionweb/src/MapContainer.css
@@ -1,6 +1,56 @@
+/* Style The Dropdown Button */
+#dropbtn {
+    max-width: 100px;
+    min-width: 100px;
+    background-color: #008E78;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+#dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+#dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+#dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+#dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+/* Show the dropdown menu on hover */
+#dropdown:hover #dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+#dropdown:hover #dropbtn {
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.9);
+}
+
 #MapLog > #MapCenter {
   position: absolute;
-  width: 60%;
+  width: 70%;
   height: 85%;
   left: 15%;
   display: inline-block;
@@ -18,13 +68,18 @@
 }
 
 #MapLog > #MapLeft {
-  width: 20%;
+  float: left;
   left: 0;
   top: 0;
   margin: 0;
-  padding-top: 80px;
+  padding-top: 40px;
   padding-left: 40px;
+}
+
+#MapLog > #MapRight > label {
+  padding-top: 30px;
   display: inline-block;
+  z-index: -1;
 }
 
 #MapLog > #MapRight {
