--- a/gestionweb/src/MapContainer.css
+++ b/gestionweb/src/MapContainer.css
@@ -10,7 +10,7 @@
   height: 100%;
   display: block;
   z-index: -1;
-  background-color: white;
+  background-color: #efffff;
 }
 
 #MapLog > #map {
@@ -25,6 +25,10 @@
   padding-top: 80px;
   padding-left: 40px;
   display: inline-block;
+}
+
+body{
+  background-color: #efffff;
 }
 
 #MapLog > #MapRight {
